services/gke/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: node-port-service
          servicePort: 80
      - path: /path2
        backend:
          serviceName: my-web-app-deployment-v2
          servicePort: 80
